Fixed bugs in the template.

--- a/template/_testing.html
+++ b/template/_testing.html
@@ -17,14 +17,14 @@
         <div style="float:right;">
           right header
         </div>
-         <center><h1><a href="#" style="text-decoration: none;">title</a></h1></center>
+         <h1><a href="#">title</a></h1>
       </div>                                
       <div class="leftside">
-        <div class="section">
-			<center><b>Section</b></center>
+        <ul class="section">
+			<li class="caption">Section</li>
 			<li class="button"><a href="#">Link 1</a></li>
 			<li class="button"><a href="#">Link 2</a></li>
-		</div>
+		</ul>
 		<br>
       </div>
       <div class="rightside">
@@ -37,7 +37,7 @@
 <p>Integer facilisis commodo porttitor. Phasellus hendrerit elementum nisi, varius adipiscing enim fringilla sit amet. Curabitur volutpat aliquet eleifend. Nulla sagittis mauris eu metus elementum eu suscipit metus mollis. Aliquam erat volutpat. Vivamus quis dui elit. Praesent tristique tristique eros, ut venenatis augue porta et. Nunc ut arcu ac massa vestibulum blandit. Proin id nulla nunc, id dapibus sapien. Pellentesque ultricies leo eu turpis fringilla at luctus nisl euismod. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse ac orci mauris, ac bibendum sem. Sed auctor magna a urna rhoncus ut pharetra velit venenatis. Quisque sollicitudin elementum tempor. Fusce rutrum dui eget ipsum varius suscipit. Vivamus eu lacus nec lacus fringilla tincidunt.</p>
       </div>
       <div class="footer">
-        <center>footer</center>
+        <p>footer</p>
       </div>      
     </div>
   </body>
