--- a/template/style.css
+++ b/template/style.css
@@ -3,43 +3,52 @@
  */
 
 .page {
-  margin: 1% 1% 1% 1%;
-  padding: 1px;
-  border: 2px solid #cc9;
-  border-radius: 15px;
-  -moz-border-radius: 15px;
+	margin: 1% 1% 1% 1%;
+	padding: 1px;
+	border: 2px solid #cc9;
+	border-radius: 15px;
+	-moz-border-radius: 15px;
 }
-  
+
 .header {
-  height: 80px;
-  padding: 5px 5px 5px 10px;
-  margin: 2px 2px 0px 2px;
-  border-top-left-radius:10px;
-  border-top-right-radius:10px;
-  -moz-border-radius-topleft:10px;
-  -moz-border-radius-topright:10px;
+	height: 80px;
+	padding: 5px 5px 5px 10px;
+	margin: 2px 2px 0px 2px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	-moz-border-radius-topleft: 10px;
+	-moz-border-radius-topright: 10px;
 }
-  
+.header h1 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+}
+.header h1 a {
+	text-decoration: none;
+}
+
 .logo {
-  float: left; 
+	float: left;
 }
 .logo img {
-  width: 200px; 
-  height: 80px; 
-  margin: 0px 10px 0px 0px;
-  border: 0px;
+	width: 200px; 
+	height: 80px; 
+	margin: 0px 10px 0px 0px;
+	border: 0px;
 }
 
 .leftside {
-  float: left;     
-  width: 20%;
-  max-width: 200px;
-  padding: 10px 2px 50px 2px;
-  margin: 0px 0px 0px 2px;
-  overflow:hidden;
+	float: left;		 
+	width: 20%;
+	max-width: 200px;
+	padding: 10px 2px 50px 2px;
+	margin: 0px 0px 0px 2px;
+	overflow: hidden;
 }
 .leftside li {
-  list-style-type: none;
+	list-style-type: none;
 }
 
 .section a:link, .button a:link, .hidden a:link {
@@ -52,9 +61,15 @@
 	text-decoration: none;
 }
 .section {
-  border-radius: 5px; -moz-border-radius: 5px;
-  padding: 5px 2px 2px 2px;
+	border-radius: 5px; -moz-border-radius: 5px;
+	padding: 5px 2px 2px 2px;
 }
+
+.caption {
+	text-align: center;
+	font-weight: bold;
+}
+
 .button {
 	border-style: outset;
 	border-width: 1px;
@@ -66,30 +81,35 @@
 .button:hover,.hidden:hover {
 	border-style: inset;
 }
+
 .hidden {
 	display: none;
-    border-style: outset;
-    border-width: 1px;
+	border-style: outset;
+	border-width: 1px;
 	margin: 1px 2px 1px 10px;
 	padding: 2px 2px 2px 2px;
 	border-radius: 5px; -moz-border-radius: 5px;
-    font-size: 90%;
+	font-size: 90%;
 }
 
 .rightside {
-  overflow:auto;
-  padding: 10px 10px 10px 10px;
-  margin: 0px 2px 0px 0px;
+	overflow: auto;
+	padding: 10px 10px 10px 10px;
+	margin: 0px 2px 0px 0px;
 }
 
 .footer {
-  clear: both;
-  font-size: 80%;
-  height: 40px;
-  padding: 5px 5px 5px 5px;
-  margin: 0px 2px 2px 2px;
-  border-bottom-left-radius:10px;
-  border-bottom-right-radius:10px;
-  -moz-border-radius-bottomleft:10px;
-  -moz-border-radius-bottomright:10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	clear: both;
+	font-size: 80%;
+	height: 40px;
+	padding: 5px 5px 5px 5px;
+	margin: 0px 2px 2px 2px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	-moz-border-radius-bottomleft: 10px;
+	-moz-border-radius-bottomright: 10px;
 }
