--- a/template/style_print.css
+++ b/template/style_print.css
@@ -2,33 +2,29 @@
  * Layout of elements in the template for printing.
  */
 
-.page {
-  margin: 0px;
-  padding: 1px;
-  border: none;
-}
-  
-.header {
-  display: none;
-}
-  
-.logo {
-  display: none;
+main {
+	margin: 0px;
+	padding: 1px;
+	border: none;
 }
 
-.leftside {
-  display: none;
+header {
+	display: none;
+}
+
+nav {
+	display: none;
 }
 
 .section {
-  display: none;
+	display: none;
 }
 
-.rightside {
-  padding: 10px 10px 10px 10px;
-  margin: 0px 2px 0px 2px;
+article {
+	padding: 10px 10px 10px 10px;
+	margin: 0px 2px 0px 2px;
 }
 
-.footer {
-  display: none;
+footer {
+	display: none;
 }
