Simplified parts of the template code.

--- a/template/_testing.html
+++ b/template/_testing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<title>Testing template</title>
@@ -23,9 +23,15 @@
 	<section>
 		<nav>
 			<ul class="section">
-				<li class="caption">Section</li>
+				<li class="caption">Section 1</li>
 				<li class="button"><a href="#">Link 1</a></li>
 				<li class="button"><a href="#">Link 2</a></li>
+			</ul>
+			
+			<ul class="section">
+				<li class="caption">Section 2</li>
+				<li class="button"><a href="#">Link 3</a></li>
+				<li class="button"><a href="#">Link 4</a></li>
 			</ul>
 		</nav>
 		<article>
