--- a/tests/fontAwesome/latte/stacked.latte
+++ b/tests/fontAwesome/latte/stacked.latte
@@ -4,7 +4,7 @@
 </span>
 <span class="fa-stack fa-lg">
 	{fa square, "stack-2x"}
-	{fa terminal, "stack-1x", inverse}
+	{fa terminal, "stack-1x", "inverse"}
 </span>
 <span class="fa-stack fa-lg">
 	{fa camera, "stack-1x"}
