--- a/src/fontAwesome/facolors.css
+++ b/src/fontAwesome/facolors.css
@@ -1,38 +1,155 @@
 /**
  * Colors for Font Awesome icons.
  */
-.fa-facebook, .fa-facebook-f, .fa-facebook-official, .fa-facebook-square { color: #3b5998; }
+.fa-android { color: #A4C639; }
+.fa-android:hover { color: inherit; }
+
+.fa-apple { color: black; }
+.fa-apple:hover { color: grey; }
+
+.fa-bitbucket, .fa-bitbucket-square { color: #0052CC; }
+.fa-bitbucket:hover, .fa-bitbucket-square:hover { color: #172B4D; }
+ 
+.fa-bluetooth, .fa-bluetooth-b { color: #0082FC; }
+.fa-bluetooth:hover, .fa-bluetooth-b:hover { color: blue; }
+
+.fa-deviantart { color: #05CC47; }
+.fa-deviantart:hover { color: #475C4D; }
+
+.fa-digg { color: black; }
+.fa-digg:hover { color: inherit; }
+
+.fa-dropbox { color: #007EE5; }
+.fa-dropbox:hover { color: inherit; }
+
+.fa-drupal { color: #0678BE; }
+.fa-drupal:hover { color: #064771; }
+
+.fa-edge { color: #0379D7; }
+.fa-edge:hover { color: inherit; }
+ 
+.fa-internet-explorer { color: #00BCF2; }
+.fa-internet-explorer:hover { color: inherit; }
+ 
+.fa-facebook, .fa-facebook-f, .fa-facebook-official, .fa-facebook-square { color: #3B5998; }
 .fa-facebook:hover, .fa-facebook-f:hover, .fa-facebook-official:hover, .fa-facebook-square:hover { color: inherit; }
 
-.fa-foursquare { color: #2d5be3; }
+.fa-fa, .fa-font-awesome { color: #1FA67A; }
+.fa-fa:hover, .fa-font-awesome:hover { color: inherit; }
+
+.fa-foursquare { color: #2D5BE3; }
 .fa-foursquare:hover { color: inherit; }
 
 .fa-github, .fa-github-alt, .fa-github-square { color: black; }
-.fa-github:hover, .fa-github-alt:hover, .fa-github-square:hover { color: #4078c0; }
+.fa-github:hover, .fa-github-alt:hover, .fa-github-square:hover { color: #4078C0; }
 
-.fa-google-plus, .fa-google-plus-circle, .fa-google-plus-official, .fa-google-plus-square { color: #dd4b39; }
+.fa-gitlab { color: #E24329; }
+.fa-gitlab:hover { color: #6B4FBB; }
+
+.fa-google { color: #4285F4; }
+.fa-google:hover { color: inherit; }
+
+.fa-google-plus, .fa-google-plus-circle, .fa-google-plus-official, .fa-google-plus-square { color: #DD4B39; }
 .fa-google-plus:hover, .fa-google-plus-circle:hover, .fa-google-plus-official:hover, .fa-google-plus-square:hover { color: inherit; }
 
-.fa-imdb { color: #f3ce00; }
+.fa-heart, .fa-heart-o, .fa-heartbeat { color: red; }
+.fa-heart:hover, .fa-heart-o:hover, .fa-heartbeat:hover { color: inherit; }
+
+.fa-imdb { color: #F3CE00; }
 .fa-imdb:hover { color: #333333; }
 
-.fa-lastfm, .fa-lastfm-square { color: #e31b23; }
+.fa-instagram { color: black; }
+.fa-instagram:hover { color: inherit; }
+
+.fa-jsfiddle { color: #1c90f3; }
+.fa-jsfiddle:hover { color: #1b63a2; }
+
+.fa-lastfm, .fa-lastfm-square { color: #E31B23; }
 .fa-lastfm:hover, .fa-lastfm-square:hover { color: inherit; }
 
-.fa-linkedin, .fa-linkedin-square { color: #0077b5; }
+.fa-linkedin, .fa-linkedin-square { color: #0077B5; }
 .fa-linkedin:hover, .fa-linkedin-square:hover { color: inherit; }
 
-.fa-steam, .fa-steam-square { color: black; }
-.fa-steam:hover, .fa-steam-square:hover { color: #67c1f5; }
+.fa-linux { color: black; }
+.fa-linux:hover { color: inherit; }
 
-.fa-soundcloud { color: #f50; }
+.fa-medium { color: #00AB6C; }
+.fa-medium:hover { color: inherit; }
+
+.fa-opera { color: #FF1B2D; }
+.fa-opera:hover { color: #B40A33; }
+
+.fa-cc-paypal, .fa-paypal { color: #003087; }
+.fa-cc-paypal:hover, .fa-paypal:hover { color: #009CDE; }
+
+.fa-pied-piper, .fa-pied-piper-alt, .fa-pied-piper-pp { color: #008479; }
+.fa-pied-piper:hover, .fa-pied-piper-alt:hover, .fa-pied-piper-pp:hover { color: inherit; }
+
+.fa-pinterest, .fa-pinterest-p, .fa-pinterest-square { color: #BD081C; }
+.fa-pinterest:hover, .fa-pinterest-p:hover, .fa-pinterest-square:hover { color: inherit; }
+
+.fa-get-pocket { color: #EE4056; }
+.fa-get-pocket:hover { color: inherit; }
+
+.fa-reddit, .fa-reddit-alien, .fa-reddit-square { color: #FF4500; }
+.fa-reddit:hover, .fa-reddit-alien:hover, .fa-reddit-square:hover { color: inherit; }
+
+.fa-skype { color: #009FE3; }
+.fa-skype:hover { color: inherit; }
+
+.fa-snapchat, .fa-snapchat-ghost, .fa-snapchat-square { color: #FFFC00; }
+.fa-snapchat:hover, .fa-snapchat-ghost:hover, .fa-snapchat-square:hover { color: inherit; }
+
+.fa-soundcloud { color: #F50; }
 .fa-soundcloud:hover { color: inherit; }
 
-.fa-twitter, .fa-twitter-square { color: #55acee; }
+.fa-spotify { color: #1DB954; }
+.fa-spotify:hover { color: #191414; }
+
+.fa-star, .fa-star-half, .fa-star-half-empty, .fa-star-half-full, .fa-star-half-o, .fa-star-o { color: yellow; }
+.fa-star:hover, .fa-star-half:hover, .fa-star-half-empty:hover, .fa-star-half-full:hover, .fa-star-half-o:hover, .fa-star-o:hover { color: inherit; }
+
+.fa-steam, .fa-steam-square { color: black; }
+.fa-steam:hover, .fa-steam-square:hover { color: #67C1F5; }
+
+.fa-telegram { color: #179cde; }
+.fa-telegram:hover { color: inherit; }
+
+.fa-trello { color: #0079BF; }
+.fa-trello:hover { color: #0C3953; }
+
+.fa-tripadvisor { color: black; }
+.fa-tripadvisor:hover { color: #589442; }
+
+.fa-tumblr, .fa-tumblr-square { color: #35465c; }
+.fa-tumblr:hover, .fa-tumblr-square:hover { color: #444444; }
+
+.fa-twitch { color: #6441A4; }
+.fa-twitch:hover { color: black; }
+
+.fa-twitter, .fa-twitter-square { color: #55ACEE; }
 .fa-twitter:hover, .fa-twitter-square:hover { color: inherit; }
 
-.fa-wikipedia-w { color: black; }
-.fa-wikipedia-w:hover { color: #0645ad; }
+.fa-vimeo, .fa-vimeo-square { color: #1AB7EA; }
+.fa-vimeo:hover, .fa-vimeo-square:hover { color: #162221; }
 
-.fa-youtube, .fa-youtube-play, .fa-youtube-square { color: #e52d27; }
+.fa-vine { color: #00b489; }
+.fa-vine:hover { color: inherit; }
+
+.fa-whatsapp { color: #25D366; }
+.fa-whatsapp:hover { color: #128C7E; }
+
+.fa-windows { color: #0078D7; }
+.fa-windows:hover { color: inherit; }
+
+.fa-wikipedia-w { color: black; }
+.fa-wikipedia-w:hover { color: #0645AD; }
+
+.fa-yahoo { color: #400192; }
+.fa-yahoo:hover { color: inherit; }
+
+.fa-yelp { color: #D32323; }
+.fa-yelp:hover { color: black; }
+
+.fa-youtube, .fa-youtube-play, .fa-youtube-square { color: #E52D27; }
 .fa-youtube:hover, .fa-youtube-play:hover, .fa-youtube-square:hover { color: inherit; }
