--- a/src/fontAwesome/facolors.css
+++ b/src/fontAwesome/facolors.css
@@ -1,155 +1,390 @@
 /**
  * Colors for Font Awesome icons.
  */
-.fa-android { color: #A4C639; }
-.fa-android:hover { color: inherit; }
+.fa-android {
+  color: #A4C639; }
+  .fa-android:hover {
+    color: inherit; }
 
-.fa-apple { color: black; }
-.fa-apple:hover { color: grey; }
+.fa-angular {
+  color: #DD0031; }
+  .fa-angular:hover {
+    color: #C3002F; }
 
-.fa-bitbucket, .fa-bitbucket-square { color: #0052CC; }
-.fa-bitbucket:hover, .fa-bitbucket-square:hover { color: #172B4D; }
- 
-.fa-bluetooth, .fa-bluetooth-b { color: #0082FC; }
-.fa-bluetooth:hover, .fa-bluetooth-b:hover { color: blue; }
+.fa-apple, .fa-apple-pay, .fa-cc-apple-pay {
+  color: black; }
+  .fa-apple:hover, .fa-apple-pay:hover, .fa-cc-apple-pay:hover {
+    color: grey; }
 
-.fa-deviantart { color: #05CC47; }
-.fa-deviantart:hover { color: #475C4D; }
+.fa-bitbucket, .fa-bitbucket-square {
+  color: #0052CC; }
+  .fa-bitbucket:hover, .fa-bitbucket-square:hover {
+    color: #172B4D; }
 
-.fa-digg { color: black; }
-.fa-digg:hover { color: inherit; }
+.fa-bitcoin, .fa-btc {
+  color: #F2A900; }
+  .fa-bitcoin:hover, .fa-btc:hover {
+    color: #4E4E4F; }
 
-.fa-dropbox { color: #007EE5; }
-.fa-dropbox:hover { color: inherit; }
+.fa-blackberry {
+  color: #282828; }
+  .fa-blackberry:hover {
+    color: #212359; }
 
-.fa-drupal { color: #0678BE; }
-.fa-drupal:hover { color: #064771; }
+.fa-blogger, .fa-blogger-b {
+  color: #FF5722; }
+  .fa-blogger:hover, .fa-blogger-b:hover {
+    color: #202020; }
 
-.fa-edge { color: #0379D7; }
-.fa-edge:hover { color: inherit; }
- 
-.fa-internet-explorer { color: #00BCF2; }
-.fa-internet-explorer:hover { color: inherit; }
- 
-.fa-facebook, .fa-facebook-f, .fa-facebook-official, .fa-facebook-square { color: #3B5998; }
-.fa-facebook:hover, .fa-facebook-f:hover, .fa-facebook-official:hover, .fa-facebook-square:hover { color: inherit; }
+.fa-bluetooth, .fa-bluetooth-b {
+  color: #0082FC; }
+  .fa-bluetooth:hover, .fa-bluetooth-b:hover {
+    color: blue; }
 
-.fa-fa, .fa-font-awesome { color: #1FA67A; }
-.fa-fa:hover, .fa-font-awesome:hover { color: inherit; }
+.fa-creative-commons {
+  color: #121513; }
+  .fa-creative-commons:hover {
+    color: #ABB3AC; }
 
-.fa-foursquare { color: #2D5BE3; }
-.fa-foursquare:hover { color: inherit; }
+.fa-css3, .fa-css3-alt {
+  color: #1572B6; }
+  .fa-css3:hover, .fa-css3-alt:hover {
+    color: #33A9DC; }
 
-.fa-github, .fa-github-alt, .fa-github-square { color: black; }
-.fa-github:hover, .fa-github-alt:hover, .fa-github-square:hover { color: #4078C0; }
+.fa-deviantart {
+  color: #05CC47; }
+  .fa-deviantart:hover {
+    color: #475C4D; }
 
-.fa-gitlab { color: #E24329; }
-.fa-gitlab:hover { color: #6B4FBB; }
+.fa-digg {
+  color: black; }
+  .fa-digg:hover {
+    color: inherit; }
 
-.fa-google { color: #4285F4; }
-.fa-google:hover { color: inherit; }
+.fa-dropbox {
+  color: #007EE5; }
+  .fa-dropbox:hover {
+    color: black; }
 
-.fa-google-plus, .fa-google-plus-circle, .fa-google-plus-official, .fa-google-plus-square { color: #DD4B39; }
-.fa-google-plus:hover, .fa-google-plus-circle:hover, .fa-google-plus-official:hover, .fa-google-plus-square:hover { color: inherit; }
+.fa-drupal {
+  color: #0678BE; }
+  .fa-drupal:hover {
+    color: #064771; }
 
-.fa-heart, .fa-heart-o, .fa-heartbeat { color: red; }
-.fa-heart:hover, .fa-heart-o:hover, .fa-heartbeat:hover { color: inherit; }
+.fa-edge {
+  color: #0379D7; }
+  .fa-edge:hover {
+    color: inherit; }
 
-.fa-imdb { color: #F3CE00; }
-.fa-imdb:hover { color: #333333; }
+.fa-internet-explorer {
+  color: #00BCF2; }
+  .fa-internet-explorer:hover {
+    color: inherit; }
 
-.fa-instagram { color: black; }
-.fa-instagram:hover { color: inherit; }
+.fa-facebook, .fa-facebook-f, .fa-facebook-official, .fa-facebook-square {
+  color: #3B5998; }
+  .fa-facebook:hover, .fa-facebook-f:hover, .fa-facebook-official:hover, .fa-facebook-square:hover {
+    color: inherit; }
 
-.fa-jsfiddle { color: #1c90f3; }
-.fa-jsfiddle:hover { color: #1b63a2; }
+.fa-facebook-messenger {
+  color: #0084FF; }
+  .fa-facebook-messenger:hover {
+    color: inherit; }
 
-.fa-lastfm, .fa-lastfm-square { color: #E31B23; }
-.fa-lastfm:hover, .fa-lastfm-square:hover { color: inherit; }
+.fa-fa, .fa-font-awesome, .fa-font-awesome-flag, .fa-font-awesome-alt {
+  color: #1FA67A; }
+  .fa-fa:hover, .fa-font-awesome:hover, .fa-font-awesome-flag:hover, .fa-font-awesome-alt:hover {
+    color: inherit; }
 
-.fa-linkedin, .fa-linkedin-square { color: #0077B5; }
-.fa-linkedin:hover, .fa-linkedin-square:hover { color: inherit; }
+.fa-foursquare {
+  color: #F94877; }
+  .fa-foursquare:hover {
+    color: #0732A2; }
 
-.fa-linux { color: black; }
-.fa-linux:hover { color: inherit; }
+.fa-git, .fa-git-square {
+  color: #F34F29; }
+  .fa-git:hover, .fa-git-square:hover {
+    color: #3D2D00; }
 
-.fa-medium { color: #00AB6C; }
-.fa-medium:hover { color: inherit; }
+.fa-github, .fa-github-alt, .fa-github-square {
+  color: black; }
+  .fa-github:hover, .fa-github-alt:hover, .fa-github-square:hover {
+    color: #4078C0; }
 
-.fa-opera { color: #FF1B2D; }
-.fa-opera:hover { color: #B40A33; }
+.fa-gitkraken {
+  color: #20968B; }
+  .fa-gitkraken:hover {
+    color: #141422; }
 
-.fa-cc-paypal, .fa-paypal { color: #003087; }
-.fa-cc-paypal:hover, .fa-paypal:hover { color: #009CDE; }
+.fa-gitlab {
+  color: #E24329; }
+  .fa-gitlab:hover {
+    color: #6B4FBB; }
 
-.fa-pied-piper, .fa-pied-piper-alt, .fa-pied-piper-pp { color: #008479; }
-.fa-pied-piper:hover, .fa-pied-piper-alt:hover, .fa-pied-piper-pp:hover { color: inherit; }
+.fa-gitter {
+  color: #F3015D; }
+  .fa-gitter:hover {
+    color: #231E59; }
 
-.fa-pinterest, .fa-pinterest-p, .fa-pinterest-square { color: #BD081C; }
-.fa-pinterest:hover, .fa-pinterest-p:hover, .fa-pinterest-square:hover { color: inherit; }
+.fa-goodreads {
+  color: #E9E5CD;
+  background-color: #79440F; }
+  .fa-goodreads:hover {
+    color: #79440F;
+    background-color: #E9E5CD; }
 
-.fa-get-pocket { color: #EE4056; }
-.fa-get-pocket:hover { color: inherit; }
+.fa-goodreads-g {
+  color: #79440F; }
+  .fa-goodreads-g:hover {
+    color: #E9E5CD; }
 
-.fa-reddit, .fa-reddit-alien, .fa-reddit-square { color: #FF4500; }
-.fa-reddit:hover, .fa-reddit-alien:hover, .fa-reddit-square:hover { color: inherit; }
+.fa-google {
+  color: #4285F4; }
+  .fa-google:hover {
+    color: inherit; }
 
-.fa-skype { color: #009FE3; }
-.fa-skype:hover { color: inherit; }
+.fa-google-plus, .fa-google-plus-circle, .fa-google-plus-official, .fa-google-plus-square, .fa-google-plus-g {
+  color: #DD4B39; }
+  .fa-google-plus:hover, .fa-google-plus-circle:hover, .fa-google-plus-official:hover, .fa-google-plus-square:hover, .fa-google-plus-g:hover {
+    color: inherit; }
 
-.fa-snapchat, .fa-snapchat-ghost, .fa-snapchat-square { color: #FFFC00; }
-.fa-snapchat:hover, .fa-snapchat-ghost:hover, .fa-snapchat-square:hover { color: inherit; }
+.fa-gulp {
+  color: #EB4A4B; }
+  .fa-gulp:hover {
+    color: inherit; }
 
-.fa-soundcloud { color: #F50; }
-.fa-soundcloud:hover { color: inherit; }
+.fa-heart, .fa-heart-o, .fa-heartbeat {
+  color: red; }
+  .fa-heart:hover, .fa-heart-o:hover, .fa-heartbeat:hover {
+    color: inherit; }
 
-.fa-spotify { color: #1DB954; }
-.fa-spotify:hover { color: #191414; }
+.fa-html5 {
+  color: #E34C26; }
+  .fa-html5:hover {
+    color: #F06529; }
 
-.fa-star, .fa-star-half, .fa-star-half-empty, .fa-star-half-full, .fa-star-half-o, .fa-star-o { color: yellow; }
-.fa-star:hover, .fa-star-half:hover, .fa-star-half-empty:hover, .fa-star-half-full:hover, .fa-star-half-o:hover, .fa-star-o:hover { color: inherit; }
+.fa-imdb {
+  color: #F3CE00;
+  background-color: black; }
+  .fa-imdb:hover {
+    color: black;
+    background-color: #F3CE00; }
 
-.fa-steam, .fa-steam-square { color: black; }
-.fa-steam:hover, .fa-steam-square:hover { color: #67C1F5; }
+.fa-instagram {
+  color: black; }
+  .fa-instagram:hover {
+    color: inherit; }
 
-.fa-telegram { color: #179cde; }
-.fa-telegram:hover { color: inherit; }
+.fa-js, .fa-js-square {
+  color: #F8DC3D;
+  background-color: #2F2F2C; }
+  .fa-js:hover, .fa-js-square:hover {
+    color: #2F2F2C;
+    background-color: #F8DC3D; }
 
-.fa-trello { color: #0079BF; }
-.fa-trello:hover { color: #0C3953; }
+.fa-jsfiddle {
+  color: #1C90F3; }
+  .fa-jsfiddle:hover {
+    color: #1B63A2; }
 
-.fa-tripadvisor { color: black; }
-.fa-tripadvisor:hover { color: #589442; }
+.fa-kickstarter, .fa-kickstarter-k {
+  color: #034752; }
+  .fa-kickstarter:hover, .fa-kickstarter-k:hover {
+    color: #2b2727; }
 
-.fa-tumblr, .fa-tumblr-square { color: #35465c; }
-.fa-tumblr:hover, .fa-tumblr-square:hover { color: #444444; }
+.fa-lastfm, .fa-lastfm-square {
+  color: #E31B23; }
+  .fa-lastfm:hover, .fa-lastfm-square:hover {
+    color: inherit; }
 
-.fa-twitch { color: #6441A4; }
-.fa-twitch:hover { color: black; }
+.fa-less {
+  color: #28497B; }
+  .fa-less:hover {
+    color: #1D365D; }
 
-.fa-twitter, .fa-twitter-square { color: #55ACEE; }
-.fa-twitter:hover, .fa-twitter-square:hover { color: inherit; }
+.fa-linkedin, .fa-linkedin-square, .fa-linkedin-in {
+  color: #0077B5; }
+  .fa-linkedin:hover, .fa-linkedin-square:hover, .fa-linkedin-in:hover {
+    color: inherit; }
 
-.fa-vimeo, .fa-vimeo-square { color: #1AB7EA; }
-.fa-vimeo:hover, .fa-vimeo-square:hover { color: #162221; }
+.fa-linux {
+  color: black; }
+  .fa-linux:hover {
+    color: inherit; }
 
-.fa-vine { color: #00b489; }
-.fa-vine:hover { color: inherit; }
+.fa-medium, .fa-medium-m {
+  color: #00AB6C; }
+  .fa-medium:hover, .fa-medium-m:hover {
+    color: inherit; }
 
-.fa-whatsapp { color: #25D366; }
-.fa-whatsapp:hover { color: #128C7E; }
+.fa-node, .fa-node-js {
+  color: #339933; }
+  .fa-node:hover, .fa-node-js:hover {
+    color: #333333; }
 
-.fa-windows { color: #0078D7; }
-.fa-windows:hover { color: inherit; }
+.fa-npm {
+  color: #CB3837; }
+  .fa-npm:hover {
+    color: #333333; }
 
-.fa-wikipedia-w { color: black; }
-.fa-wikipedia-w:hover { color: #0645AD; }
+.fa-opera {
+  color: #FF1B2D; }
+  .fa-opera:hover {
+    color: #B40A33; }
 
-.fa-yahoo { color: #400192; }
-.fa-yahoo:hover { color: inherit; }
+.fa-python {
+  color: #366F9F; }
+  .fa-python:hover {
+    color: #FFDB4F; }
 
-.fa-yelp { color: #D32323; }
-.fa-yelp:hover { color: black; }
+.fa-paypal, .fa-cc-paypal {
+  color: #003087; }
+  .fa-paypal:hover, .fa-cc-paypal:hover {
+    color: #009CDE; }
 
-.fa-youtube, .fa-youtube-play, .fa-youtube-square { color: #E52D27; }
-.fa-youtube:hover, .fa-youtube-play:hover, .fa-youtube-square:hover { color: inherit; }
+.fa-pied-piper, .fa-pied-piper-alt, .fa-pied-piper-pp {
+  color: #008479; }
+  .fa-pied-piper:hover, .fa-pied-piper-alt:hover, .fa-pied-piper-pp:hover {
+    color: inherit; }
+
+.fa-pinterest, .fa-pinterest-p, .fa-pinterest-square {
+  color: #BD081C; }
+  .fa-pinterest:hover, .fa-pinterest-p:hover, .fa-pinterest-square:hover {
+    color: inherit; }
+
+.fa-get-pocket {
+  color: #EE4056; }
+  .fa-get-pocket:hover {
+    color: inherit; }
+
+.fa-react {
+  color: #61DAFB; }
+  .fa-react:hover {
+    color: #20232A; }
+
+.fa-reddit, .fa-reddit-alien, .fa-reddit-square {
+  color: #FF4500; }
+  .fa-reddit:hover, .fa-reddit-alien:hover, .fa-reddit-square:hover {
+    color: inherit; }
+
+.fa-sass {
+  color: #CD669A; }
+  .fa-sass:hover {
+    color: #040707; }
+
+.fa-skype {
+  color: #009FE3; }
+  .fa-skype:hover {
+    color: inherit; }
+
+.fa-slack, .fa-slack-hash {
+  color: #2D333A; }
+  .fa-slack:hover, .fa-slack-hash:hover {
+    color: inherit; }
+
+.fa-snapchat, .fa-snapchat-ghost, .fa-snapchat-square {
+  color: #FFFC00; }
+  .fa-snapchat:hover, .fa-snapchat-ghost:hover, .fa-snapchat-square:hover {
+    color: black; }
+
+.fa-soundcloud {
+  color: #F50; }
+  .fa-soundcloud:hover {
+    color: inherit; }
+
+.fa-spotify {
+  color: #1DB954; }
+  .fa-spotify:hover {
+    color: #191414; }
+
+.fa-star, .fa-star-half, .fa-star-half-empty, .fa-star-half-full, .fa-star-half-o, .fa-star-o {
+  color: yellow; }
+  .fa-star:hover, .fa-star-half:hover, .fa-star-half-empty:hover, .fa-star-half-full:hover, .fa-star-half-o:hover, .fa-star-o:hover {
+    color: inherit; }
+
+.fa-steam, .fa-steam-square, .fa-steam-symbol {
+  color: black; }
+  .fa-steam:hover, .fa-steam-square:hover, .fa-steam-symbol:hover {
+    color: #67C1F5; }
+
+.fa-telegram, .fa-telegram-plane {
+  color: #179CDE; }
+  .fa-telegram:hover, .fa-telegram-plane:hover {
+    color: inherit; }
+
+.fa-trello {
+  color: #0079BF; }
+  .fa-trello:hover {
+    color: #0C3953; }
+
+.fa-tripadvisor {
+  color: black; }
+  .fa-tripadvisor:hover {
+    color: #589442; }
+
+.fa-tumblr, .fa-tumblr-square {
+  color: #35465C; }
+  .fa-tumblr:hover, .fa-tumblr-square:hover {
+    color: #444444; }
+
+.fa-twitch {
+  color: #6441A4; }
+  .fa-twitch:hover {
+    color: black; }
+
+.fa-twitter, .fa-twitter-square {
+  color: #55ACEE; }
+  .fa-twitter:hover, .fa-twitter-square:hover {
+    color: inherit; }
+
+.fa-vimeo, .fa-vimeo-square, .fa-vimeo-v {
+  color: #1AB7EA; }
+  .fa-vimeo:hover, .fa-vimeo-square:hover, .fa-vimeo-v:hover {
+    color: #162221; }
+
+.fa-vine {
+  color: #00B489; }
+  .fa-vine:hover {
+    color: inherit; }
+
+.fa-whatsapp, .fa-whatsapp-square {
+  color: #25D366; }
+  .fa-whatsapp:hover, .fa-whatsapp-square:hover {
+    color: #128C7E; }
+
+.fa-windows {
+  color: #0078D7; }
+  .fa-windows:hover {
+    color: inherit; }
+
+.fa-wikipedia-w {
+  color: black; }
+  .fa-wikipedia-w:hover {
+    color: #0645AD; }
+
+.fa-wordpress, .fa-wordpress-simple {
+  color: #464646; }
+  .fa-wordpress:hover, .fa-wordpress-simple:hover {
+    color: #21759B; }
+
+.fa-xbox {
+  color: #107C10; }
+  .fa-xbox:hover {
+    color: #5DC21E; }
+
+.fa-yahoo {
+  color: #400192; }
+  .fa-yahoo:hover {
+    color: inherit; }
+
+.fa-yelp {
+  color: #D32323; }
+  .fa-yelp:hover {
+    color: black; }
+
+.fa-youtube, .fa-youtube-play, .fa-youtube-square {
+  color: #E52D27; }
+  .fa-youtube:hover, .fa-youtube-play:hover, .fa-youtube-square:hover {
+    color: inherit; }
+
+/*# sourceMappingURL=facolors.css.map */
